@@ -1,3 +1,9 @@
+2003-07-21  Uwe Pross  <uwe.pross@gmx.net>
+
+	* logo-competition/logos_new.php: 
+	* logo-competition/logos/Alex_Wallis/*:
+	added logo of alex wallis
+
 2003-07-18  Uwe Pross  <uwe.pross@e-technik.tu-chemnitz.de>
 
 	* customize_theme/theme_descriptions_helper.inc: 
